2011-04-15  vadim  <vadim@netcitadel.com>

	* fwbedit.cpp (main): see #2328 "Add ability to run firewall import
	from the command line". This has been implemented as a new function
	"import" in fwbedit. See man page fwbedit(1) and "fwbuilder -h" for
	more details.

	* iptables.g (multiport_tcp_udp_port_spec): see #2245 fixed bug in
	parser for iptables that prevented correct import of iptables rules
	using module "multiport" with port range matches.

2011-04-14  vadim  <vadim@netcitadel.com>

	* CompilerDriver_pix_run.cpp (pixSecurityLevelChecks): see #2351
	Security levels of ASA and FWSM interfaces do not have to be
	unique. Removed check that enforced this.

	* IPTImporterRun.cpp (run): see #2275 Importer for iptables now
	correctly handles both "intrapositioned" ("-s ! address") and
	"extrapositioned" ("! -s address") negation.

	* platform/fwsm.xml: see #2295 Added FWSM version "3.2". According to
	Cisco documentation, FWSM version 3.2 matches PIX 7.

	* platform/pix.xml: see #2348: "Accounting action is not valid for
	FWSM platform". Actions "Accounting" and "Reject" should not
	appear in the drop-down list of actions in the GUI if platform is
	pix or fwsm.

	* PolicyCompiler_pix.cpp (printPreambleCommands): see #2347 "FWSM
	move up the "access-list mode auto-commit" command". Command that
	configures access list commit mode should be issued before any
	commands that clear and configure access lists. Also in this
	change moving commands that set up temporary access list to the
	top of the script.

	* PolicyCompiler_pix.cpp (printClearCommands): see #2322 If this
	is FWSM and if manual commit mode is used, need to commit after
	clearing ACLs before we clear object groups.

2011-04-13  Vadim Kurland  <vadim@netcitadel.com>

	* IPTImporter.cpp (pushPolicyRule): see #2338 "Empty Mangle Policy
	object created on import". Iptables rules in the table 'mangle'
	will be imported in the dedicated Policy rule set with name